# testax

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  README.rst  conf.py  index.rst  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: build.yml
testax/: __init__.py
tests/: test_numpy.py  test_testax.py
