[project]

name = "testax"
version = "0.2.0"
dependencies = [
    "jax",
]
readme = "README.rst"
description = "Jit-able runtime assertions for jax in numpy style."

# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.run]
source = [
    "testax",
]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
]
fail_under = 100
show_missing = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "--cov -v"
